--- a/_includes/team.html
+++ b/_includes/team.html
@@ -23,7 +23,7 @@
                 <div class="col-sm-3">
                     <div class="team-member">
                         {% if member.github %}
-                        <img src="https://avatars.githubusercontent.com/{{ member.github }}?s=96" class="img-responsive img-circle" alt="">
+                        <img src="https://avatars.githubusercontent.com/{{ member.github }}" class="img-responsive img-circle" alt="">
                         <h4><a href="https://github.com/{{ member.github }}">{{ member.name }}</a></h4>
                         {% else %}
                         <i class="fa fa-user"></i>
