--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -26,7 +26,7 @@
                   {% assign eventcount = eventcount | plus: 1 %}
                   <li>
                     <a class='eventTitle' href="{{ post.link }}">{{ post.title }}</a>
-                    <div class='eventSub'>{{ post.date | date: "%-d %B %Y"}}, {{ post.location }}</div>
+                    <div class='eventSub'>{{ post.date | date: "%B %-d, %Y"}} — {{ post.location }}</div>
                     <div class='eventText'>{{ post.text }}</div>
                   </li>
                 {% endif %}
