changed to white title bar text

--- a/_includes/css/custom.css
+++ b/_includes/css/custom.css
@@ -76,5 +76,5 @@ div.row {
 }
 
 .navbar-default.navbar-shrink .navbar-brand {
-	color: #{{ site.color.primary }};
+	/*color: #{{ site.color.primary }};*/
 }
