--- a/_includes/header.html
+++ b/_includes/header.html
@@ -40,7 +40,11 @@
             <div class="intro-text">
                 <div class="intro-lead-in">{{ site.headlineSmall }}</div>
                 <div class="intro-heading">{{ site.headlineMain }}</div>
-                <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+                {% if site.survey_url %}
+                    <a href="{{ site.survey_url }}" target="_blank" class="btn btn-xl">Join The Community</a>
+                {% else %}
+                    <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+                {% endif %}
             </div>
         </div>
     </header>
