--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
         <div class="col-lg-12">
           <div class="row">
             <a href="https://www.mozillascience.org">
-              <img src="img/ScienceLabSticker.ai.png" class="img-responsive img-centered" alt="">
+              <img src="/img/ScienceLabSticker.ai.png" class="img-responsive img-centered" alt="">
             </a>
           </div>
           <div class="row">
