--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -37,7 +37,7 @@
               </ul>
               <div class="eventSuggest">
                 <div class="col-lg-12 text-center">
-                    <a href="{{ '/studyGroup' | prepend: site.user | prepend: 'https://github.com/' }}/labels/workshop" class="btn btn-xl">Suggest an Event</a>
+                    <a href="/events#portfolio" class="btn btn-xl">See all Events</a>
                     <a href="{{ '/studyGroup' | prepend: site.user | prepend: 'https://github.com/' }}/tree/gh-pages/lessons" class="btn btn-xl">Lead a Session</a>
                 </div>
               </div>
