--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,8 +27,13 @@
                     <li>
                         <a class="page-scroll" href="#contact">{{site.data[site.language].contact}}</a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a class="page-scroll" href="#team">Team</a>
+                    </li> -->
+                    <li>
+                        <a class="page-scroll" href="https://www.facebook.com/groups/sciprog/">
+                          <img class="page-scroll fb-icon" src="/img/fb.png" />
+                        </a>
                     </li>
                 </ul>
             </div>
