--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -33,7 +33,7 @@
                 <div class="row">
                       <div class="col-lg-12 text-center">
                           <a href="{{ site.github.issues_url }}" class="btn btn-xl eventSuggest">{{site.data[site.language].suggestEvent}}</a>
-                          <a href="http://mozillascience.github.io/studyGroupHandbook/event-types.html#workalong" class="btn btn-xl eventSuggest">{{site.data[site.language].leadEvent}}</a>
+                          <a href="https://github.com/sciprog-sfu/sciprog-sfu.github.io/blob/master/lessons/README.md" class="btn btn-xl eventSuggest">{{site.data[site.language].leadEvent}}</a>
                       </div>
                 </div>
                 {% endif %}
