--- a/_includes/css/custom.css
+++ b/_includes/css/custom.css
@@ -2,11 +2,20 @@
 
 section h3.section-subheading {
     line-height: 2;
-    max-width: 50em;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 1em;
     font-style: normal;
+}
+
+section#services h3.section-subheading {
+	font-size: 1.5em;
+    text-align: left;
+}
+
+section p.service-text {
+	text-align: left;
+	font-size: 1.2em;
 }
 
 header .intro-text .intro-lead-in {
