--- a/_includes/services.html
+++ b/_includes/services.html
@@ -16,7 +16,7 @@
                             <i class="fa {{activity.icon}} fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="service-heading">{{activity.title}}</h4>
-                        <p class="text-muted">{{activity.description}}</p>
+                        <p class="text-muted service-text">{{activity.description}}</p>
                     </div>
                 {% endfor %}
             </div>
